Implement filter in ComboBox for Currency Culture picker

--- a/Source/WPF/MyMoney/Views/CurrenciesView.xaml
+++ b/Source/WPF/MyMoney/Views/CurrenciesView.xaml
@@ -119,6 +119,8 @@
                                     Converter={StaticResource CulturePickerConverter}}"
                       ItemsSource="{Binding Path=CurrencyCultures}" 
                       DisplayMemberPath="CultureInfoName" 
+                      FilterChanged="ComboBoxCultureInfo_FilterChanged" 
+                      IsTextSearchCaseSensitive="False"
                       GotFocus="ComboBoxForCultureCode_GotFocus"
                      >
 
