reduce the boldness

--- a/Source/WPF/MyMoney/Views/CurrenciesView.xaml
+++ b/Source/WPF/MyMoney/Views/CurrenciesView.xaml
@@ -143,7 +143,7 @@
                             <Label Grid.Column="0" Content="{Binding CurrencySymbol}" HorizontalAlignment="Left" />
                             <Label Grid.Column="1" Content="{Binding DisplayName}" HorizontalAlignment="Left" MinWidth="400" Margin="10,0"/>
                             <Image Grid.Column="2" Source="{Binding CountryFlag}" HorizontalAlignment="Center" Width="20"/>
-                            <Label Grid.Column="3" Content="{Binding CultureInfoName}" HorizontalAlignment="Right"  FontWeight="ExtraBold" Margin="10,0"/>
+                            <Label Grid.Column="3" Content="{Binding CultureInfoName}" HorizontalAlignment="Right"  FontWeight="Bold" Margin="10,0"/>
                         </Grid>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
