--- a/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
@@ -119,7 +119,8 @@
             </Grid>
 
             <TextBlock Text="Currency:" Grid.Column="0" Grid.Row="14" HorizontalAlignment="Right" />
-            <ComboBox x:Name="ComboBoxCurrency"  Grid.Column="2" Grid.Row="14"  Text="{Binding Path=Currency, Mode=TwoWay}"  TabIndex="9" SelectionChanged="OnCurrencyChanged"/>
+            <ComboBox x:Name="ComboBoxCurrency"  Grid.Column="2" Grid.Row="14"  Text="{Binding Path=Currency, Mode=TwoWay}"  TabIndex="9" SelectionChanged="OnCurrencyChanged"
+                      ToolTip="To add exchange rates see View/Currencies"/>
             <TextBlock x:Name="TextRate"  Grid.Column="3" Grid.Row="14" VerticalAlignment="Center" Width="Auto" Padding="2,3" Margin="5"  />
 
             <TextBlock Text="Web Site:" Grid.Column="0" Grid.Row="16" HorizontalAlignment="Right" />
